# website-monitor

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: ci.yml  post-merge.yml
docs/: project-plan.md
scripts/: inspect_audio.py
services/api_service/: config.py  db.py  main.py  models.py
services/api_service/routes/: health.py  monitors.py
services/api_service/static/: index.html
services/probe_service/: config.py  db.py  logger.py  main.py  models.py  prober.py  publisher.py
services/probe_service/routes/: health.py
services/stt_gateway/: DESIGN.md  README.md  config.py  main.py  models.py
services/stt_gateway/providers/: azure_speech.py  base.py
services/stt_gateway/routes/: health.py  ws.py
services/ws_gateway/: main.py  models.py  ws_client.py
services/ws_gateway/routes/: health.py  ws.py
tests/: test_api_service.py  test_config.py  test_db.py  test_health.py  test_logger.py  test_models.py  test_prober.py  test_publisher.py  test_smoke.py  test_stt_gateway.py  test_ws_client.py  test_ws_gateway.py  ws_client.py
tmp/: ws_test_server.py
